trying fix for overflow

--- a/css/captcha.css
+++ b/css/captcha.css
@@ -17,8 +17,8 @@
     flex: 1 1 200px;
     max-width: 200px;
     margin-right: 20px;
+    overflow: hidden;
     overflow-y: auto;
-    overflow-x: hidden;
 }
 
 .info-right {
